cfg/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection : enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection : enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    istio-injection : enabled
