cfg/dbt.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dbt
  labels:
    istio-injection : enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dbt
  name: deployment-dbt
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-dbt-docs
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-dbt-docs
    spec:
      containers:
      - name: app-dbt-docs
        image: 948065143262.dkr.ecr.us-east-1.amazonaws.com/patrick-cloud-dev-dbt-docs:
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: dbt
  name: service-dbt-docs
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-dbt-docs
