cfg/aws_lb_controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-external-ingress
  namespace: istio-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {
        "Type": "redirect", 
        "RedirectConfig": { 
          "Protocol": "HTTPS", 
          "Port": "443", 
          "StatusCode": "HTTP_301"
        }
      }    
    alb.ingress.kubernetes.io/load-balancer-name: alb-external-ingress
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: "15021"
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-0c710c462cb484a42, subnet-000ae3c185c099f56
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:948065143262:certificate/e8287206-84d2-470f-8843-c6d344cbf8e2
    # alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-west-2:123456789011:regional/webacl/prod-common-alb-acl/ae2e63f9-02f4-44b8-9d25-XXXXXXXXXXXX
  labels:
    app: alb-external-ingress
spec:
  rules:
    - http:
        paths:
          - path: /    
            pathType: Prefix  
            backend:
              service:
                name: ssl-redirect
                port: 
                  name: use-annotation
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: istio-ingress
          #       port:
          #         number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingress
                port:
                  number: 443
          - path: /healthz/ready
            pathType: Prefix
            backend:
              service:
                name: istio-ingress
                port: 
                  number: 15021
